--- a/environment.yml
+++ b/environment.yml
@@ -162,6 +162,7 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
     - coffea==0.7.25
+    - HiggsML==0.1.3
     - ipython==8.32.0
     - jax==0.4.13
     - iminuit==2.31.1
