--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -7,11 +7,65 @@ path_saved_data: 'cached_data/'
 # Directory where pre-selection model is saved
 path_preselection_NN_model: 'preselection_saved_NN/'
 
+# # Features to use for training NNs
+# columns : ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_had_pt', 'PRI_had_eta',
+#        'PRI_had_phi', 'PRI_met', 'PRI_met_phi', 'DER_mass_transverse_met_lep',
+#        'DER_mass_vis', 'DER_pt_h', 'DER_deltar_had_lep', 'DER_pt_tot', 'DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta',
+#        'PRI_jet_leading_phi',
+#        'PRI_jet_all_pt', 'PRI_jet_subleading_pt',
+#        'PRI_jet_subleading_eta', 'PRI_jet_subleading_phi', 'DER_deltaeta_jet_jet', 'DER_mass_jet_jet',
+#        'DER_prodeta_jet_jet',
+#        'DER_lep_eta_centrality', 'jet1_mask', 'jet2_mask', 'njet_0', 'njet_1', 'njet_2']
+
+# # Features to standardize before training
+# columns_scaling : ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_had_pt', 'PRI_had_eta',
+#        'PRI_had_phi', 'PRI_met', 'PRI_met_phi', 'DER_mass_transverse_met_lep',
+#        'DER_mass_vis', 'DER_pt_h', 'DER_deltar_had_lep', 'DER_pt_tot', 'DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta',
+#        'PRI_jet_leading_phi',
+#        'PRI_jet_all_pt', 'PRI_jet_subleading_pt',
+#        'PRI_jet_subleading_eta', 'PRI_jet_subleading_phi', 'DER_deltaeta_jet_jet', 'DER_mass_jet_jet',
+#        'DER_prodeta_jet_jet',
+#        'DER_lep_eta_centrality']
+
+ 
+# # Features to use for training NNs
+# columns : ['DER_mass_transverse_met_lep',
+#        'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality', 'DER_deltaeta_jet_jet', 'log_DER_mass_jet_jet',
+#        'DER_prodeta_jet_jet',
+#        'DER_lep_eta_centrality', 'jet1_mask', 'jet2_mask', 'njet_0', 'njet_1']
+
+# # Features to standardize before training
+# columns_scaling : ['DER_mass_transverse_met_lep',
+#        'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality', 'DER_deltaeta_jet_jet', 'log_DER_mass_jet_jet',
+#        'DER_prodeta_jet_jet',
+#        'DER_lep_eta_centrality']
+
+# # Features to use for training NNs
+# columns : ['DER_mass_transverse_met_lep',
+#        'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality',
+#        'DER_lep_eta_centrality', 'jet1_mask', 'njet_0', 'njet_1']
+
+# # Features to standardize before training
+# columns_scaling : ['DER_mass_transverse_met_lep',
+#        'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+#        'DER_pt_ratio_lep_had', 'DER_met_phi_centrality',
+#        'DER_lep_eta_centrality']
+
 # Features to use for training NNs
-columns : ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']
+columns : ['DER_mass_transverse_met_lep',
+       'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+       'DER_pt_ratio_lep_had', 'DER_met_phi_centrality']
 
 # Features to standardize before training
-columns_scaling : ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']
+columns_scaling : ['DER_mass_transverse_met_lep',
+       'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+       'DER_pt_ratio_lep_had', 'DER_met_phi_centrality']
+
 
 # Signal processes in the model
 signal_processes : ["htautau"]
@@ -21,9 +75,9 @@ background_processes : ["ttbar", "ztautau"]
 # background_processes = ["ttbar", "ztautau", "diboson"]
 
 # choice of reference hypothesis
-ref_processes : ["htautau"]
+ref_processes : ["htautau"] 
 
-# mix_model_hypotheses = signal_processes + background_processes
+# mix_model_hypotheses = signal_processes + background_processes for which density ratios need to be estimated
 mix_model_hypotheses : ["ttbar", "ztautau"]
 
 
@@ -48,7 +102,7 @@ floating_processes    : ['htautau', 'ttbar', 'ztautau']
 fixed_processes       : []
 
 # labels for the various binned and unbinned channels
-channels_binned : ['CR']
+channels_binned : ['SR_binned', 'CR']
 channels_unbinned : ['SR']
 
 # Mapping process to index of the floating parameters
@@ -72,11 +126,11 @@ dict_systs:
       - up
       - dn
 
-  JES:
-    process:
-      - htautau
-      - ttbar
-      - ztautau
-    directions:
-      - up
-      - dn
+  # JES:
+  #   process:
+  #     - htautau
+  #     - ttbar
+  #     - ztautau
+  #   directions:
+  #     - up
+  #     - dn
