--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -29,7 +29,6 @@ path_preselection_NN_model: 'preselection_saved_NN/'
 #        'DER_prodeta_jet_jet',
 #        'DER_lep_eta_centrality']
 
- 
 
 # Features to use for training NNs
 features : ['DER_mass_transverse_met_lep',
@@ -49,12 +48,12 @@ signal_processes : ["htautau"]
 background_processes : ["ttbar", "ztautau"]
 
 # choice of reference hypothesis
-ref_processes : ["htautau"] 
-# ref_processes : ["htautau", "ttbar"] 
+# ref_processes : ["htautau"] 
+ref_processes : ["htautau", "ttbar"] 
 
 # mix_model_hypotheses = signal_processes + background_processes for which density ratios need to be estimated
-mix_model_hypotheses : ["ttbar", "ztautau"]
-# mix_model_hypotheses : ["htautau", "ttbar", "ztautau"]
+# mix_model_hypotheses : ["ttbar", "ztautau"]
+mix_model_hypotheses : ["htautau", "ttbar", "ztautau"]
 
 
 # Assign an integer with each of the processes 
