--- a/FAIR_universe_Higgs_tautau/config_new.yml
+++ b/FAIR_universe_Higgs_tautau/config_new.yml
@@ -1,39 +1,64 @@
-channel_selections = {'CR': {'observable': 'presel_score', 
-                             'lower_presel': -999, 
-                             'upper_presel': preselection_cuts.get('lower'), 
-                             'num_bins': 4},
-                      
-                      'SR_binned': {'observable': 'presel_score', 
-                                    'lower_presel': preselection_cuts.get('upper'), 
-                                    'upper_presel': -999,
-                                    'num_bins': 1},
-                      
-                      'SR': {'observable': None, 
-                             'upper_presel': preselection_cuts.get('upper'), 
-                             'lower_presel': preselection_cuts.get('lower')}}
+# Base path to save/load data from
+path_prefix : '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'
 
-Regions :
-  - Name            : 'SR_binned'
-    Type            : 'binned'
-    Filter          : 'presel_score < '
-    Variable        : ''
-    Binning         : []
+# Cache name
+path_saved_data: 'cached_data_new/'
 
-  - Name            : 'CR'
-    Type            : 'binned'
-    Filter          : ''
-    Variable        : ''
-    Binning         : []
+# Directory where pre-selection model is saved
+path_preselection_NN_model: 'preselection_saved_NN/'
 
-  - Name            : 'SR'
-    Type            : 'unbinned'
-    Filter          : ''
+path_to_nominal_dataframe : f"df_nominal.h5"
 
-  - Name: 'CR'
-    Type: 'binned'
-  - Name: 'SR'
-    Type: 'unbinned'
+# Features to use for training NNs
+features : ['DER_mass_transverse_met_lep',
+       'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+       'DER_pt_ratio_lep_had', 'DER_met_phi_centrality']
 
-  Samples :
-    - Name          :
-      SamplePaths     : 'XYZ.h5'
+# Features to standardize before training
+features_scaling : ['DER_mass_transverse_met_lep',
+       'log_DER_mass_vis', 'log_DER_pt_h', 'DER_deltar_had_lep', 'log_DER_pt_tot', 'log_DER_sum_pt',
+       'DER_pt_ratio_lep_had', 'DER_met_phi_centrality']
+
+
+# Signal processes in the model
+signal_processes : ["htautau"]
+
+# Background processes in the model
+background_processes : ["ttbar", "ztautau"]
+
+# choice of reference hypothesis
+# ref_processes : ["htautau"] 
+ref_processes : ["htautau", "ttbar"] 
+
+# Assign an integer with each of the processes 
+labels_dict:
+  htautau: 0
+  ztautau: 1
+  ttbar: 2
+  # diboson: 3 # exclude low stats diboson sample for now
+
+# Regions :
+#   - Name            : 'SR_binned'
+#     Type            : 'binned'
+#     Filter          : 'presel_score < '
+#     Variable        : ''
+#     Binning         : []
+
+#   - Name            : 'CR'
+#     Type            : 'binned'
+#     Filter          : ''
+#     Variable        : ''
+#     Binning         : []
+
+#   - Name            : 'SR'
+#     Type            : 'unbinned'
+#     Filter          : ''
+
+#   - Name: 'CR'
+#     Type: 'binned'
+#   - Name: 'SR'
+#     Type: 'unbinned'
+
+#   Samples :
+#     - Name          :
+#       SamplePaths     : 'XYZ.h5'
