--- a/environment.yml
+++ b/environment.yml
@@ -1,175 +1,319 @@
-name: NSBI_env
+name: nsbi_env
 channels:
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - anyio=4.8.0=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_1
-  - argon2-cffi-bindings=21.2.0=py311h9ecbd09_5
-  - arrow=1.3.0=pyhd8ed1ab_1
+  - _x86_64-microarch-level=4=2_zen4
+  - absl-py=2.3.1=pyhd8ed1ab_0
+  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
+  - aiohttp=3.12.15=py39heb7d2ae_0
+  - aiosignal=1.4.0=pyhd8ed1ab_0
+  - annotated-types=0.7.0=pyhd8ed1ab_1
   - asttokens=3.0.0=pyhd8ed1ab_1
-  - async-lru=2.0.4=pyhd8ed1ab_1
-  - attrs=25.1.0=pyh71513ae_0
-  - awkward=2.7.4=pyhd8ed1ab_0
-  - awkward-cpp=44=py311hf8c1401_300
-  - babel=2.17.0=pyhd8ed1ab_0
-  - beautifulsoup4=4.13.3=pyha770c72_0
-  - bleach=6.2.0=pyh29332c3_4
-  - bleach-with-css=6.2.0=h82add2a_4
-  - brotli-python=1.1.0=py311hfdbb021_2
+  - astunparse=1.6.3=pyhd8ed1ab_3
+  - async-timeout=5.0.1=pyhd8ed1ab_1
+  - attrs=25.3.0=pyh71513ae_0
+  - awkward=2.8.7=pyhe01879c_0
+  - awkward-cpp=48=py39h98a113b_0
+  - aws-c-auth=0.7.31=he1a10d6_2
+  - aws-c-cal=0.7.4=hae4d56a_2
+  - aws-c-common=0.9.29=hb9d3cd8_0
+  - aws-c-compression=0.2.19=h2bff981_2
+  - aws-c-event-stream=0.4.3=h19b0707_4
+  - aws-c-http=0.8.10=h14a7884_2
+  - aws-c-io=0.14.19=hc9e6898_1
+  - aws-c-mqtt=0.10.7=hb8d5873_2
+  - aws-c-s3=0.6.7=h666547d_0
+  - aws-c-sdkutils=0.1.19=h2bff981_4
+  - aws-checksums=0.1.20=h2bff981_1
+  - aws-crt-cpp=0.28.3=hbe26082_8
+  - aws-sdk-cpp=1.11.407=h25d6d5c_1
+  - azure-core-cpp=1.13.0=h935415a_0
+  - azure-identity-cpp=1.8.0=hd126650_2
+  - azure-storage-blobs-cpp=12.12.0=hd2e3451_0
+  - azure-storage-common-cpp=12.7.0=h10ac4d7_1
+  - azure-storage-files-datalake-cpp=12.11.0=h325d260_1
+  - blosc=1.21.6=hef167b5_0
+  - bokeh=3.4.2=pyhd8ed1ab_0
+  - boost-histogram=1.5.2=py39h9048731_0
+  - brotli=1.1.0=hb9d3cd8_3
+  - brotli-bin=1.1.0=hb9d3cd8_3
+  - brotli-python=1.1.0=py39hf88036b_3
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.1.31=hbcca054_0
+  - c-ares=1.34.5=hb9d3cd8_0
+  - c-blosc2=2.15.2=h68e2383_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.1.31=pyhd8ed1ab_0
-  - cffi=1.17.1=py311hf29c0ef_0
-  - charset-normalizer=3.4.1=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - debugpy=1.8.12=py311hfdbb021_0
-  - decorator=5.1.1=pyhd8ed1ab_1
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
-  - fqdn=1.5.1=pyhd8ed1ab_1
-  - fsspec=2025.2.0=pyhd8ed1ab_0
-  - h11=0.14.0=pyhd8ed1ab_1
+  - cachetools=6.1.0=pyhd8ed1ab_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
+  - cffi=1.17.1=py39h15c3d72_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - click=8.1.8=pyh707e725_0
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
+  - coffea=2025.7.3=pyhe01879c_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - contourpy=1.3.0=py39h74842e3_2
+  - correctionlib=2.7.0=py39h3420216_0
+  - cpython=3.9.23=py39hd8ed1ab_0
+  - cramjam=2.11.0=py39h881adfc_0
+  - cuda-crt-tools=12.9.86=ha770c72_2
+  - cuda-cudart=12.9.79=h5888daf_0
+  - cuda-cudart_linux-64=12.9.79=h3f2d84a_0
+  - cuda-cupti=12.9.79=h9ab20c4_0
+  - cuda-nvcc-tools=12.9.86=he02047a_2
+  - cuda-nvrtc=12.9.86=h5888daf_0
+  - cuda-nvtx=12.9.79=h5888daf_0
+  - cuda-nvvm-tools=12.9.86=h4bc722e_2
+  - cuda-version=12.9=h4f385c5_3
+  - cudnn=9.11.0.98=hbcb9cd8_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cytoolz=1.0.1=py39h8cd3c5a_0
+  - dask=2024.8.0=pyhd8ed1ab_0
+  - dask-awkward=2025.5.0=pyhe01879c_0
+  - dask-core=2024.8.0=pyhd8ed1ab_0
+  - dask-expr=1.1.10=pyhd8ed1ab_0
+  - dask-histogram=2025.2.0=pyhe01879c_1
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - distributed=2024.8.0=pyhd8ed1ab_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.0=pyhd8ed1ab_0
+  - filelock=3.18.0=pyhd8ed1ab_0
+  - flatbuffers=24.3.25=h59595ed_0
+  - fonttools=4.59.0=py39heb7d2ae_0
+  - freetype=2.13.3=ha770c72_1
+  - frozenlist=1.7.0=py39h53edacf_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
+  - gast=0.6.0=pyhd8ed1ab_0
+  - gflags=2.2.2=h5888daf_1005
+  - giflib=5.2.2=hd590300_0
+  - glog=0.7.1=hbabe93e_0
+  - gmp=6.3.0=hac33072_2
+  - gmpy2=2.2.1=py39h7196dd7_0
+  - google-pasta=0.2.0=pyhd8ed1ab_2
+  - grpcio=1.62.2=py39h174d805_0
   - h2=4.2.0=pyhd8ed1ab_0
+  - h5py=3.13.0=nompi_py39h30a5a8d_100
+  - hdf5=1.14.3=nompi_h2d575fe_109
+  - hist=2.8.1=pyha35247d_2
+  - hist-base=2.8.1=pyhe01879c_2
+  - histoprint=2.6.0=pyhd8ed1ab_0
   - hpack=4.1.0=pyhd8ed1ab_0
-  - httpcore=1.0.7=pyh29332c3_1
-  - httpx=0.28.1=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
   - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.6.1=pyha770c72_0
+  - iminuit=2.31.1=py39haef64b4_1
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - importlib-resources=6.5.2=pyhd8ed1ab_0
+  - importlib_metadata=8.7.0=h40b2b14_1
   - importlib_resources=6.5.2=pyhd8ed1ab_0
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.32.0=pyh907856f_0
-  - isoduration=20.11.0=pyhd8ed1ab_1
+  - ipython=8.18.1=pyh707e725_3
+  - jax=0.4.28=pyhd8ed1ab_0
+  - jaxlib=0.4.28=cpu_py39h32154bb_0
   - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.5=pyhd8ed1ab_0
-  - json5=0.10.0=pyhd8ed1ab_1
-  - jsonpointer=3.0.0=py311h38be061_1
-  - jsonschema=4.23.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
-  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
-  - jupyter-lsp=2.2.5=pyhd8ed1ab_1
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - jupyter_events=0.12.0=pyh29332c3_0
-  - jupyter_server=2.15.0=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.3.5=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
-  - jupyterlab_server=2.27.3=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - keras=3.10.0=pyh753f3f9_0
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py39h74842e3_0
   - krb5=1.21.3=h659f571_0
-  - ld_impl_linux-64=2.43=h712a8e2_2
-  - libblas=3.9.0=28_h59b9bed_openblas
-  - libcblas=3.9.0=28_he106b2a_openblas
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.44=h1423503_1
+  - lerc=4.0.0=h0aef613_1
+  - libabseil=20240116.2=cxx17_he02047a_1
+  - libaec=1.1.4=h3f801dc_0
+  - libarrow=17.0.0=had3b6fe_16_cpu
+  - libarrow-acero=17.0.0=h5888daf_16_cpu
+  - libarrow-dataset=17.0.0=h5888daf_16_cpu
+  - libarrow-substrait=17.0.0=hf54134d_16_cpu
+  - libblas=3.9.0=34_h59b9bed_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_3
+  - libbrotlidec=1.1.0=hb9d3cd8_3
+  - libbrotlienc=1.1.0=hb9d3cd8_3
+  - libcblas=3.9.0=34_he106b2a_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcublas=12.9.1.4=h9ab20c4_0
+  - libcudnn=9.11.0.98=hf7e9902_0
+  - libcudnn-dev=9.11.0.98=h58dd1b1_0
+  - libcufft=11.4.1.4=h5888daf_0
+  - libcurand=10.3.10.19=h9ab20c4_0
+  - libcurl=8.14.1=h332b0f4_0
+  - libcusolver=11.7.5.82=h9ab20c4_1
+  - libcusparse=12.5.10.65=h5888daf_1
+  - libdeflate=1.24=h86f0d12_0
   - libedit=3.1.20250104=pl5321h7949ede_0
-  - libexpat=2.6.4=h5888daf_0
-  - libffi=3.4.6=h2dba641_0
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgfortran=14.2.0=h69a702a_1
-  - libgfortran5=14.2.0=hd5240d6_1
-  - libgomp=14.2.0=h77fa898_1
-  - liblapack=3.9.0=28_h7ac8fdf_openblas
-  - liblzma=5.6.4=hb9d3cd8_0
-  - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.28=pthreads_h94d23a6_1
-  - libsodium=1.0.20=h4ab18f5_0
-  - libsqlite=3.48.0=hee588c1_1
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.7.1=hecca717_0
+  - libffi=3.4.6=h2dba641_1
+  - libfreetype=2.13.3=ha770c72_1
+  - libfreetype6=2.13.3=h48d6fc4_1
+  - libgcc=15.1.0=h767d61c_4
+  - libgcc-ng=15.1.0=h69a702a_4
+  - libgfortran=15.1.0=h69a702a_4
+  - libgfortran-ng=15.1.0=h69a702a_4
+  - libgfortran5=15.1.0=hcea5267_4
+  - libgomp=15.1.0=h767d61c_4
+  - libgoogle-cloud=2.29.0=h435de7b_0
+  - libgoogle-cloud-storage=2.29.0=h0121fbd_0
+  - libgrpc=1.62.2=h15f2491_0
+  - libiconv=1.18=h4ce23a2_1
+  - libjpeg-turbo=3.1.0=hb9d3cd8_0
+  - liblapack=3.9.0=34_h7ac8fdf_openblas
+  - libllvm14=14.0.6=hcd5def8_4
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libnvjitlink=12.9.86=h5888daf_1
+  - libopenblas=0.3.30=pthreads_h94d23a6_1
+  - libparquet=17.0.0=h39682fd_16_cpu
+  - libpng=1.6.50=h421ea60_1
+  - libprotobuf=4.25.3=hd5b35b9_1
+  - libre2-11=2023.09.01=h5a48ba9_2
+  - libsqlite=3.50.4=h0c1763c_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.1.0=h8f9b012_4
+  - libstdcxx-ng=15.1.0=h4852527_4
+  - libthrift=0.20.0=h0e7cc3e_1
+  - libtiff=4.7.0=hf01ce69_5
+  - libtorch=2.4.1=cpu_generic_hb3b73e9_0
+  - libutf8proc=2.8.0=hf23e847_1
   - libuuid=2.38.1=h0b41bf4_0
-  - libuv=1.50.0=hb9d3cd8_0
+  - libuv=1.51.0=hb03c661_1
+  - libwebp-base=1.6.0=hd42ef1d_0
+  - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.8=h04c0eec_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - markupsafe=3.0.2=py311h2dc5d0c_1
+  - llvmlite=0.43.0=py39hf8b6b1a_1
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4=4.3.3=py39hd7df8f7_1
+  - lz4-c=1.9.4=hcb278e6_0
+  - lzo=2.10=h280c20c_1002
+  - markdown=3.8.2=pyhd8ed1ab_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_1
+  - markupsafe=3.0.2=py39h9399b63_1
+  - matplotlib-base=3.9.4=py39h16632d1_0
   - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - mistune=3.1.1=pyhd8ed1ab_0
-  - nbclient=0.10.2=pyhd8ed1ab_0
-  - nbconvert-core=7.16.6=pyh29332c3_0
-  - nbformat=5.10.4=pyhd8ed1ab_1
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - ml_dtypes=0.4.0=py39h3b40f6f_2
+  - mpc=1.3.1=h24ddda3_1
+  - mpfr=4.2.1=h90cbb55_3
+  - mplhep=0.4.0=pyhd8ed1ab_0
+  - mplhep_data=0.0.4=pyhd8ed1ab_2
+  - mpmath=1.3.0=pyhd8ed1ab_1
+  - msgpack-python=1.1.1=py39h74842e3_0
+  - multidict=6.6.3=py39h9399b63_0
+  - munkres=1.1.4=pyhd8ed1ab_1
+  - namex=0.1.0=pyhd8ed1ab_0
+  - nccl=2.27.7.1=h49b9d9a_0
   - ncurses=6.5=h2d0b736_3
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - nodejs=22.12.0=hf235a45_0
-  - notebook-shim=0.2.4=pyhd8ed1ab_1
-  - numpy=2.2.3=py311h5d046bc_0
-  - openssl=3.4.1=h7b32b05_0
-  - overrides=7.7.0=pyhd8ed1ab_1
-  - packaging=24.2=pyhd8ed1ab_2
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - networkx=3.2.1=pyhd8ed1ab_0
+  - nomkl=1.0=h5ca1d4c_0
+  - numba=0.60.0=py39h0320e7d_0
+  - numexpr=2.10.2=py39h0a7e20a_100
+  - numpy=1.26.4=py39h474f0d3_0
+  - openjpeg=2.5.3=h55fea9a_1
+  - openssl=3.5.2=h26f9b46_0
+  - opt-einsum=3.4.0=hd8ed1ab_1
+  - opt_einsum=3.4.0=pyhd8ed1ab_1
+  - optree=0.17.0=py39h8f7d636_0
+  - orc=2.0.2=h669347b_0
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.3.1=py39h1b6b32d_0
   - parso=0.8.4=pyhd8ed1ab_1
+  - partd=1.4.2=pyhd8ed1ab_0
   - pexpect=4.9.0=pyhd8ed1ab_1
   - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.0.1=pyh8b19718_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - prometheus_client=0.21.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.50=pyha770c72_0
-  - psutil=6.1.1=py311h9ecbd09_0
+  - pillow=11.3.0=py39h15c0740_0
+  - pip=25.2=pyh8b19718_0
+  - prompt-toolkit=3.0.51=pyha770c72_0
+  - propcache=0.3.1=py39h9399b63_0
+  - protobuf=4.25.3=py39hbb4dce6_1
+  - psutil=7.0.0=py39h8cd3c5a_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd8ed1ab_1
   - pure_eval=0.2.3=pyhd8ed1ab_1
+  - py-cpuinfo=9.0.0=pyhd8ed1ab_1
+  - pyarrow=17.0.0=py39he8689d4_2
+  - pyarrow-core=17.0.0=py39h6117c73_2_cpu
+  - pyarrow-hotfix=0.7=pyhd8ed1ab_0
   - pycparser=2.22=pyh29332c3_1
-  - pygments=2.19.1=pyhd8ed1ab_0
+  - pydantic=2.11.7=pyh3cfb1c2_0
+  - pydantic-core=2.33.2=py39h20260ba_0
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - pyparsing=3.2.3=pyhe01879c_2
   - pysocks=1.7.1=pyha55dd90_7
-  - python=3.11.11=h9e4cc4f_1_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - pytables=3.9.2=py39hd89fbf8_3
+  - python=3.9.23=hc30ae73_0_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python_abi=3.11=5_cp311
-  - pytz=2025.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py311h2dc5d0c_2
-  - pyzmq=26.2.1=py311h7deb3e3_0
-  - readline=8.2=h8228510_1
-  - referencing=0.36.2=pyh29332c3_0
-  - requests=2.32.3=pyhd8ed1ab_1
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.22.3=py311h9e33e62_0
-  - send2trash=1.8.3=pyh0d859eb_1
-  - setuptools=75.8.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
-  - sniffio=1.3.1=pyhd8ed1ab_1
-  - soupsieve=2.5=pyhd8ed1ab_1
+  - python-flatbuffers=25.2.10=pyhbc23db3_0
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python-xxhash=3.5.0=py39h8cd3c5a_2
+  - python_abi=3.9=8_cp39
+  - pytorch=2.4.1=cpu_generic_py39h7d91780_0
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py39h9399b63_2
+  - qhull=2020.2=h434a139_5
+  - re2=2023.09.01=h7f4b329_2
+  - readline=8.2=h8c095d6_2
+  - requests=2.32.4=pyhd8ed1ab_0
+  - rich=14.1.0=pyhe01879c_0
+  - s2n=1.5.5=h3931f03_0
+  - scipy=1.13.1=py39haf93ffa_0
+  - setuptools=80.9.0=pyhff2d567_0
+  - six=1.17.0=pyhe01879c_1
+  - sleef=3.8=h1b44611_0
+  - snappy=1.2.2=h03e3b7b_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - stack_data=0.6.3=pyhd8ed1ab_1
-  - terminado=0.18.1=pyh0d859eb_0
-  - tinycss2=1.4.0=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tomli=2.2.1=pyhd8ed1ab_1
-  - tornado=6.4.2=py311h9ecbd09_0
+  - sympy=1.14.0=pyh2585a3b_105
+  - tblib=3.1.0=pyhd8ed1ab_0
+  - tensorboard=2.17.1=pyhd8ed1ab_0
+  - tensorboard-data-server=0.7.0=py39h7170ec2_2
+  - tensorflow=2.17.0=cuda120py39h298b457_202
+  - tensorflow-base=2.17.0=cuda120py39hec49795_202
+  - tensorflow-estimator=2.17.0=cuda120py39h225b957_202
+  - termcolor=3.1.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - toml=0.10.2=pyhd8ed1ab_1
+  - toolz=1.0.0=pyhd8ed1ab_1
+  - tornado=6.5.1=py39h8cd3c5a_0
+  - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
-  - types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - typing_utils=0.1.0=pyhd8ed1ab_1
-  - tzdata=2025a=h78e105d_0
-  - uri-template=1.3.0=pyhd8ed1ab_1
-  - urllib3=2.3.0=pyhd8ed1ab_0
+  - typing-extensions=4.14.1=h4440ef1_0
+  - typing-inspection=0.4.1=pyhd8ed1ab_0
+  - typing_extensions=4.14.1=pyhe01879c_0
+  - tzdata=2025b=h78e105d_0
+  - uhi=0.5.0=pyhd8ed1ab_0
+  - unicodedata2=16.0.0=py39h8cd3c5a_0
+  - uproot=5.6.3=pyhe01879c_0
+  - urllib3=2.5.0=pyhd8ed1ab_0
+  - vector=1.6.3=pyhe01879c_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
-  - webcolors=24.11.1=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_3
-  - websocket-client=1.8.0=pyhd8ed1ab_1
+  - werkzeug=3.1.3=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h3b0a872_7
-  - zipp=3.21.0=pyhd8ed1ab_1
-  - zlib=1.3.1=hb9d3cd8_2
-  - zstandard=0.23.0=py311hbc35293_1
-  - zstd=1.5.6=ha6fb4c9_0
+  - wrapt=1.17.2=py39h8cd3c5a_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xxhash=0.8.3=hb47aa4a_0
+  - xyzservices=2025.4.0=pyhd8ed1ab_0
+  - yaml=0.2.5=h280c20c_3
+  - yarl=1.20.1=py39h9399b63_0
+  - zict=3.0.0=pyhd8ed1ab_1
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zlib-ng=2.2.5=hde8ca8f_0
+  - zstandard=0.23.0=py39h8cd3c5a_2
+  - zstd=1.5.7=hb8e6e7a_2
+  - zuko=1.4.1=pyhd8ed1ab_0
   - pip:
-    - coffea==0.7.25
-    - HiggsML==0.1.3
-    - ipython==8.32.0
-    - jax==0.4.13
-    - iminuit==2.31.1
-    - jaxlib==0.4.13
-    - joblib==1.4.2
-    - pyhf==0.7.6
-    - scikit-learn==1.6.1
-    - tables==3.10.2
-    - tensorflow==2.18.0
-    - zuko==1.3.1
+      - argparse==1.4.0
+      - higgsml==0.1.3
+      - joblib==1.5.1
+      - mpld3==0.5.11
+      - scikit-learn==1.6.1
+      - seaborn==0.13.2
+      - tabulate==0.9.0
+      - threadpoolctl==3.6.0
+prefix: /home/jsandesara_umass_edu/.conda/envs/nsbi_env
