--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -31,10 +31,6 @@ TRAINING_FEATURES_TO_SCALE:
 - DER_pt_ratio_lep_had
 - DER_met_phi_centrality
 PATH_TO_nominal_DATA: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_nominal.h5
-PATH_TO_TES_up_DATA: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_TES_up.h5
-PATH_TO_TES_dn_DATA: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_TES_dn.h5
-PATH_TO_JES_up_DATA: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_JES_up.h5
-PATH_TO_JES_dn_DATA: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_JES_dn.h5
 PATH_PRESEL_MODEL: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/preselection_model/
 Regions:
 -   Name: CR
@@ -56,3 +52,27 @@ Regions:
     Filter: presel_score>=-1.0 & presel_score<=4.5
     Variable: null
     Binning: null
+    ratio_htautau: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy
+    ratio_ttbar: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy
+    ratio_ztautau: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy
+MIX_MODEL_HYPOTHESES:
+- htautau
+- ttbar
+- ztautau
+Systematics:
+-   Name: TES
+    weight_up: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_TES_up.h5
+    weight_dn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_TES_dn.h5
+    Type: NormPlusShape
+    Samples:
+    - htautau
+    - ztautau
+    - ttbar
+-   Name: JES
+    weight_up: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_JES_up.h5
+    weight_dn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/df_JES_dn.h5
+    Type: NormPlusShape
+    Samples:
+    - htautau
+    - ztautau
+    - ttbar
