--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,3 +65,26 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+nsbi-common-utils = { path = ".", editable = true }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+pip = ">=25.2,<26"
+ipykernel = ">=6.30.1,<7"
+pandas = ">=2.3.1,<3"
+matplotlib = ">=3.10.5,<4"
+coffea = ">=2025.7.3,<2026"
+mplhep = ">=0.4.0,<0.5"
+pytables = ">=3.10.2,<4"
+tensorflow = ">=2.18.0,<3"
+scikit-learn = ">=1.7.1,<2"
+zuko = ">=1.4.1,<2"
+nbconvert = ">=7.16.6,<8"
+jax = ">=0.5.2,<0.6"
